[package]
name = "fancy-wc"
version = "0.1.0"
authors = ["Janis Strautins <strautins.janis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 1

[dependencies]
rppal = "0.11.3"
play = "0.5.3"
rodio = "0.13.0"